--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,194 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap');
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
+}
+
+.logo {
+    width: 7%;
+    padding: 1em;
+}
+
+.logoImg {
+    max-width: 100%;
+}
+
+
+.nav-links {
+    width: 30%;
+}
+
+.links {
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    font-size: 1.1rem;
+}
+
+.link {
+    position: relative;
+    padding: 0.5em;
+}
+
+.l,
+.log,
+.sign {
+    text-decoration: none;
+    color: rgb(155, 155, 246);
+}
+
+.log {
+    border-radius: 5px;
+    padding: 0.47em 1em;
+    border: 1px solid rgb(155, 155, 246);
+}
+
+.l::after {
+    content: '';
+    position: absolute;
+    background-color: rgb(36, 36, 251);
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    height: 3px;
+    transition: width 0.5s;
+}
+
+.l:hover::after {
+    width: 100%;
+}
+
+.sign {
+    background-color: rgb(155, 155, 246);
+    color: white;
+    padding: 0.5em 1em;
+    border-radius: 5px;
+    transition: background-color 0.5s;
+}
+
+.sign:hover {
+    background-color: rgb(36, 36, 251);
+}
+
+.reg {
+    display: flex;
+    width: 15%;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.1rem;
+}
+
+.navb {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.body {
+    width: 100%;
+}
+
+.quote {
+    margin: 1em auto;
+    text-align: center;
+    color: rgb(155, 155, 246);
+    font-size: 2rem;
+    width: 80%;
+    padding: 1em;
+    transition: box-shadow 0.7s;
+}
+
+.login {
+    box-shadow: 5px 5px 10px rgb(163, 160, 160);
+}
+
+.quote:hover {
+    box-shadow: 5px 5px 10px rgb(163, 160, 160);
+}
+
+.body-img {
+    width: 50%;
+    margin: 2em auto;
+    transition: transform 0.2s;
+}
+
+.body-img:hover {
+    transform: scale(1.01);
+}
+
+.body-img img {
+    max-width: 100%;
+    border-radius: 5px;
+}
+
+#book {
+    position: absolute;
+    top: 400px;
+    left: 50px;
+    font-size: 3rem;
+}
+
+#circle {
+    position: absolute;
+    top: 200px;
+    right: 60px;
+    font-size: 3rem;
+}
+
+#user-icon {
+    position: absolute;
+    top: 300px;
+    left: 40px;
+}
+
+#verified {
+    position: absolute;
+    top: 500px;
+    right: 40px;
+}
+
+.circle1 {
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+    position: relative;
+    left: -45px;
+    bottom: 20px;
+}
+
+.wave {
+    height: 100vh;
+    overflow: hidden;
+    box-shadow: 5px 5px 10px rgb(163, 160, 160);
+}
+
+.for-pass-h {
+   width: 80%;
+   height: 300px;
+}
+
+.for-pass-h img {
+    max-width: 100%;
+    height: 100%;
+}
